test cases added