@@ -40,6 +40,15 @@ android {
     buildFeatures {
         compose = true
     }
+
+    testOptions {
+        unitTests {
+            isIncludeAndroidResources = true
+            all {
+                it.jvmArgs("-XX:+EnableDynamicAgentLoading", "-Djdk.attach.allowAttachSelf=true")
+            }
+        }
+    }
 }
 
 dependencies {
@@ -52,13 +61,8 @@ dependencies {
     implementation(libs.androidx.ui.graphics)
     implementation(libs.androidx.ui.tooling.preview)
     implementation(libs.androidx.material3)
-    testImplementation(libs.junit)
-    androidTestImplementation(libs.androidx.junit)
-    androidTestImplementation(libs.androidx.espresso.core)
-    androidTestImplementation(platform(libs.androidx.compose.bom))
-    androidTestImplementation(libs.androidx.ui.test.junit4)
-    debugImplementation(libs.androidx.ui.tooling)
-    debugImplementation(libs.androidx.ui.test.manifest)
+    implementation(libs.androidx.junit.ktx)
+
 
     implementation(libs.hilt.android)
     ksp(libs.hilt.android.compiler)
@@ -67,7 +71,6 @@ dependencies {
     implementation(libs.mlkit.face.detection)
     implementation(libs.coil.compose)
     implementation(libs.kotlinx.coroutines.play.services)
-
 
     // Coroutines
     implementation(libs.kotlinx.coroutines.core)
@@ -81,4 +84,25 @@ dependencies {
     // Gson
     implementation(libs.gson)
 
+    // Test dependencies
+    testImplementation(libs.mockito.core)
+    testImplementation(libs.mockito.kotlin)
+    testImplementation(libs.kotlinx.coroutines.test)
+    testImplementation(libs.mockk)
+    testImplementation(libs.androidx.core.testing)
+    testImplementation(libs.kotlin.test)
+    testImplementation(libs.junit)
+    androidTestImplementation(libs.androidx.junit)
+    androidTestImplementation(libs.androidx.espresso.core)
+    androidTestImplementation(platform(libs.androidx.compose.bom))
+    androidTestImplementation(libs.androidx.ui.test.junit4)
+    debugImplementation(libs.androidx.ui.tooling)
+    debugImplementation(libs.androidx.ui.test.manifest)
+    
+    // Robolectric
+    testImplementation(libs.robolectric)
+    
+    // MockK for Android
+    testImplementation(libs.mockk.android)
+    testImplementation(libs.mockk.agent)
 }
